Fixed sun not appearing on mobile

--- a/src/_animation.scss
+++ b/src/_animation.scss
@@ -23,6 +23,9 @@
 }
 
 @keyframes hide {
+  from {
+    opacity: 1;
+  }
   to {
     opacity: 0;
   }
