--- a/src/_sun.scss
+++ b/src/_sun.scss
@@ -1,12 +1,15 @@
 .sun {
   position: absolute;
+  opacity: 0;
   left: 0;
   top: 10%;
   border-radius: 50%;
+  box-shadow: 0px 0px 150px 150px rgb(138, 117, 255);
   transform: translateX(-100%);
+  animation: show 1000ms linear 1000ms forwards,
+             hide 1000ms linear 2000ms forwards;
 }
 
-.sun::before,
 .sun::after {
   position: absolute;
   content: '';
@@ -14,14 +17,14 @@
   left: 0;
 }
 
-.sun::before {
+/* .sun::before {
   top: 10%;
   border-radius: 50%;
-  transform: translateX(-100%);
+  transform: translateX(-50%);
   box-shadow: 0px 0px 150px 150px rgb(138, 117, 255);
   animation: show 1000ms linear 1000ms forwards,
              hide 1000ms linear 2000ms forwards;
-}
+} */
 
 .sun::after {
   top: 0;
